--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/ux.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nicole Condon | User Researcher</title>
+  <title>Nicole Condon | UX Designer</title>
 </head>
 
 <body>
